--- a/src/app/core/transaction/transaction-small-chart/transaction-small-chart.component.html
+++ b/src/app/core/transaction/transaction-small-chart/transaction-small-chart.component.html
@@ -1,1 +1,7 @@
-<p-meter-group [value]="items" labelOrientation="vertical"></p-meter-group>
+<p-fieldset legend="Categories overall spending" [toggleable]="true">
+    <p>
+        <p-meter-group [value]="items" labelOrientation="vertical"></p-meter-group>
+    </p>
+</p-fieldset>
+
+
