--- a/src/app/core/transaction/transaction-screen/transaction-screen.component.html
+++ b/src/app/core/transaction/transaction-screen/transaction-screen.component.html
@@ -1,12 +1,30 @@
 <div>
-    <div class="bg-surface-0 p-4 rounded-2xl flex flex-col gap-4">
-        <transaction-big-chart></transaction-big-chart>
+    <div class="bg-surface-0 px-3 py-1 rounded-2xl flex flex-col gap-3">
+        <transaction-big-chart
+                [transactions]="$transactions()"
+                [categories]="$categories()">
+
+        </transaction-big-chart>
     </div>
-    <div class="bg-surface-0 p-4 rounded-2xl flex flex-col gap-4">
-        <transaction-small-chart [transactions]="$transactions()"></transaction-small-chart>
+<!--    <div class="bg-surface-0 px-3 py-1 rounded-2xl flex flex-col gap-3">
+        <transaction-small-chart
+                [transactions]="$transactions()"
+                [categories]="$categories()"
+        >
+        </transaction-small-chart>
+    </div>-->
+    <div class="bg-surface-0 px-3 py-1 rounded-2xl flex flex-col gap-3">
+        <transaction-category-summary
+                [transactions]="$transactions()"
+                [categories]="$categories()">
+        </transaction-category-summary>
     </div>
-    <div class="border border-surface rounded-2xl p-4 light:bg-surface-950 flex gap-4">
-        <transaction-list [transactions]="$transactions()"></transaction-list>
+    <div class="px-3 py-1 light:bg-surface-950 flex gap-3 full-width">
+        <transaction-list
+                [transactions]="$transactions()"
+                [categories]="$categories()"
+        ></transaction-list>
     </div>
+
 </div>
 
