FMB-23 Make category editable from transaction screen

--- a/src/app/core/category/category-list/category-list.component.html
+++ b/src/app/core/category/category-list/category-list.component.html
@@ -68,6 +68,7 @@
             [matchTypes]="matchTypes"
             [fieldTypes]="fieldTypes"
             (notify)="onNotify($event)"
+            (close)="toggleShowEditCategoryDialog()"
     >
     </edit-category>
 </p-fieldset>
