--- a/src/app/core/transaction/transaction-screen/transaction-screen.component.html
+++ b/src/app/core/transaction/transaction-screen/transaction-screen.component.html
@@ -3,20 +3,15 @@
         <transaction-big-chart
                 [transactions]="$transactions()"
                 [categories]="$categories()">
-
         </transaction-big-chart>
     </div>
-<!--    <div class="bg-surface-0 px-3 py-1 rounded-2xl flex flex-col gap-3">
-        <transaction-small-chart
-                [transactions]="$transactions()"
-                [categories]="$categories()"
-        >
-        </transaction-small-chart>
-    </div>-->
     <div class="bg-surface-0 px-3 py-1 rounded-2xl flex flex-col gap-3">
         <transaction-category-summary
                 [transactions]="$transactions()"
-                [categories]="$categories()">
+                [categories]="$categories()"
+                [banks]="$banks()"
+                [matchTypes]="$matchTypes()"
+                [fieldTypes]="$fieldTypes()">
         </transaction-category-summary>
     </div>
     <div class="px-3 py-1 light:bg-surface-950 flex gap-3 full-width">
